deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: demo
  labels:
    app: demo
  annotations:
    deployment.kubernetes.io/revision: '1'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo
  template: # template for pods
    metadata:
      labels:
        # the service will use this label to find the pods
        app: demo
    spec:
      containers:
        - name: httpd
          image: httpd
          ports:
          - containerPort: 80
            # name is optional, to be used by the service
            name: container-port
