pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: podname
spec:
  containers:
    - name: container-name
      image: busybox
      # resources:
      #   limits:
      #     memory: "128Mi"
      #     cpu: "0.5"
      command:
        - sh
        - -c
        - echo "Hello, Kubernetes!" && sleep 600
      # ports:
      #   - containerPort: <Port>
