service.yml
apiVersion: v1
kind: Service
metadata:
  name: myservice
  # namespace: kiskutya
spec:
  # type defaults to ClusterIP
  # type: LoadBalancer
  selector:
    # calls pods, not deployments!
    app: mypod
  ports:
    - port: 80
      targetPort: 80
