ingress.yml
# to make it work locally
# https://kubernetes.github.io/ingress-nginx/deploy/#docker-desktop
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: demo-localhost
  labels:
    name: demo-localhost
spec:
  ingressClassName: nginx
  rules:
  - host: demo.localdev.me
    http:
      paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: demo-service
              port:
                number: 80
